# AegisQR

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN (copy).md  PLAN.md  README.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  plan-enterprise.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-portable.yml
apps/desktop-tauri/: README.md
apps/mobile/: README.md
benches/: README.md
bindings/node/: README.md
bindings/python/: README.md
crates/aegisqr-agent/: Cargo.toml
crates/aegisqr-agent/src/: lib.rs
crates/aegisqr-audit/: Cargo.toml
crates/aegisqr-audit/src/: lib.rs
crates/aegisqr-cli/: Cargo.toml
crates/aegisqr-cli/src/: main.rs
crates/aegisqr-container/: Cargo.toml
crates/aegisqr-container/src/: lib.rs
crates/aegisqr-core/: Cargo.toml
crates/aegisqr-core/src/: lib.rs  license.rs
crates/aegisqr-core/tests/: integration_scenarios.rs  property_placeholder.rs
crates/aegisqr-crypto/: Cargo.toml
crates/aegisqr-crypto/src/: lib.rs
crates/aegisqr-encoding/: Cargo.toml
crates/aegisqr-encoding/src/: lib.rs
crates/aegisqr-policy/: Cargo.toml
crates/aegisqr-policy/src/: lib.rs
crates/aegisqr-qr/: Cargo.toml
crates/aegisqr-qr/src/: lib.rs
crates/aegisqr-recovery/: Cargo.toml
crates/aegisqr-recovery/src/: lib.rs
crates/aegisqr-repo/: Cargo.toml
crates/aegisqr-repo/src/: lib.rs
crates/aegisqr-runtime/: Cargo.toml
crates/aegisqr-runtime/src/: lib.rs
crates/aegisqr-ui/: Cargo.toml
crates/aegisqr-ui/src/: main.rs
docs/: AGENTIC_BUILD_PROMPT.md  agent-index.md  airgap-mode.md  auto-execute.md  capsule-format.md  enterprise-policy.md  plan-enterprise.md  portable-install.md  qr-transport.md
examples/agent-auto-execute/: README.md
examples/airgap/: README.md
examples/enterprise/: README.md
examples/personal/: README.md
fuzz/: README.md
packaging/: install.ps1  install.sh  manifest.json  trust-store.example.json
test-vectors/: README.md
