[workspace]
members = [
  "crates/aegisqr-core",
  "crates/aegisqr-cli",
  "crates/aegisqr-container",
  "crates/aegisqr-crypto",
  "crates/aegisqr-encoding",
  "crates/aegisqr-qr",
  "crates/aegisqr-policy",
  "crates/aegisqr-agent",
  "crates/aegisqr-recovery",
  "crates/aegisqr-runtime",
  "crates/aegisqr-audit",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
qrcode = "0.14"
image = { version = "0.25", default-features = true }
rand = "0.8"
rand_core = "0.6"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "1"
walkdir = "2"
zeroize = "1"
zstd = "0.13"
