[package]
name = "aegisqr-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
rpassword = "7.4.0"
aegisqr-core = { path = "../aegisqr-core" }
aegisqr-repo = { path = "../aegisqr-repo" }
zeroize.workspace = true
