[package]
name = "aegisqr-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
base64.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
qrcode.workspace = true
image = { workspace = true, optional = true }
rand.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
thiserror.workspace = true
walkdir.workspace = true
zeroize.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["qr-png"]
qr-png = ["dep:image"]
