[package]
name = "aegisqr-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
hex.workspace = true
rand.workspace = true
aegisqr-core = { path = "../aegisqr-core" }
aegisqr-repo = { path = "../aegisqr-repo" }
rpassword = "7.4.0"
serde_json = { workspace = true }
zeroize = { workspace = true }
